--- a/DIRECT_ext_departed.conf
+++ b/DIRECT_ext_departed.conf
@@ -17,7 +17,7 @@ udp-policy-not-supported-behaviour = REJECT
 always-real-ip=time.*.com,ntp.*.com,*.cloudflareclient.com,localhost.sec.qq.com,localhost.ptlogin2.qq.com,localhost.work.weixin.qq.com
 
 # URL-адрес обновления файла конфигурации
-update-url = https://github.com/SNETLV/SR/raw/refs/heads/main/DIRECT_ext_departed.conf
+update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/DIRECT_ext_departed.conf
 
 #[Proxy Group]
 #AUTO = url-test,interval=600,timeout=5,url=https://cp.cloudflare.com/generate_204,policy-regex-filter=*
@@ -28,7 +28,7 @@ update-url = https://github.com/SNETLV/SR/raw/refs/heads/main/DIRECT_ext_departe
 # asn: https://github.com/P3TERX/GeoLite.mmdb/raw/download/GeoLite2-ASN.mmdb
 
 [Rule]
-#RULE-SET,https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/release/rules/domain_custom.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/departed.list,PROXY
 
 
 # Final
