--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -16,16 +16,11 @@ hijack-dns = :853
 udp-policy-not-supported-behaviour = REJECT
 always-real-ip=time.*.com,ntp.*.com,*.cloudflareclient.com,localhost.sec.qq.com,localhost.ptlogin2.qq.com,localhost.work.weixin.qq.com
 
-# URL-адрес обновления файла конфигурации
-#update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/DIRECT_ext_departed.conf
-
-# Если у вас нет аккаунта на Maxmind и вы испольузуете финальное правило Proxy или Auto
-# country: https://git.io/GeoLite2-Country.mmdb
-# asn: https://github.com/P3TERX/GeoLite.mmdb/raw/download/GeoLite2-ASN.mmdb
+update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/PROXY_ext_local.conf
 
 [Rule]
-#RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/departed.list,PROXY
-
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_domains_ext_UA.list,DIRECT
 
 # Final
 FINAL,PROXY
