--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -19,8 +19,10 @@ always-real-ip=time.*.com,ntp.*.com,*.cloudflareclient.com,localhost.sec.qq.com,
 update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/PROXY_ext_local.conf
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
+#Rules with domains ru, su, by, kz and similar
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_domains_ext_UA.list,DIRECT
+#Yandex, Mail, Selectel, Tilda and other forced domains
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
 
 # Final
 FINAL,PROXY
