--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -23,6 +23,8 @@ update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/P
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_domains_ext_UA.list,DIRECT
 #Yandex, Mail, Selectel, Tilda and other forced domains
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
+#Government services
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/GOV.list,DIRECT,no-resolve
 
 # Final
 FINAL,PROXY
