--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -18,10 +18,6 @@ always-real-ip=time.*.com,ntp.*.com,*.cloudflareclient.com,localhost.sec.qq.com,
 
 update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/PROXY_ext_local.conf
 
-[URL Rewrite]
-^https?://(www.)?g.ru https://www.google.com 302
-^https?://(www.)?google.ru https://www.google.com 302
-
 [Rule]
 #Rules with domains ru, su, by, kz and similar
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_domains_ext_UA.list,DIRECT
@@ -29,6 +25,12 @@ RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_d
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
 #Government services
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/GOV.list,DIRECT,no-resolve
+
+#Custom Google rewrite
+DOMAIN-KEYWORD,google,PROXY
+[URL Rewrite]
+^https?://(www.)?g.ru https://www.google.com 302
+^https?://(www.)?google.ru https://www.google.com 302
 
 [Host]
 localhost = 127.0.0.1
