--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -25,8 +25,8 @@ DOMAIN-KEYWORD,google,PROXY
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_domains_ext_UA.list,DIRECT
 #Yandex, Mail, Selectel, Tilda and other forced domains
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
-#Government services
-RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/GOV.list,DIRECT,no-resolve
+#Sparkmail App
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/sparkmail.list,DIRECT
 
 # Final
 FINAL,PROXY
