--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -26,9 +26,10 @@ RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_d
 #Yandex, Mail, Selectel, Tilda and other forced domains
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
 #Apple force
-RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/special.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_old.list,DIRECT
+#RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/special.list,DIRECT
 #Apple proxy
-RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_media.list,PROXY
+#RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_media.list,PROXY
 #Sparkmail App
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/sparkmail.list,DIRECT
 
