--- a/IN_RU/DIRECT_ext_departed.conf
+++ b/IN_RU/DIRECT_ext_departed.conf
@@ -19,9 +19,8 @@ always-real-ip=time.*.com,ntp.*.com,*.cloudflareclient.com,localhost.sec.qq.com,
 # URL-адрес обновления файла конфигурации
 update-url = https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/DIRECT_ext_departed.conf
 
-# Если у вас нет аккаунта на Maxmind и вы испольузуете финальное правило Proxy или Auto
-# country: https://git.io/GeoLite2-Country.mmdb
-# asn: https://github.com/P3TERX/GeoLite.mmdb/raw/download/GeoLite2-ASN.mmdb
+ country: https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/Country.mmdb
+ asn: https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/ASN.mmdb
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/departed.list,PROXY
