--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -29,6 +29,9 @@ RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/provi
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_old.list,DIRECT
 #Sparkmail App
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/sparkmail.list,DIRECT
+#Force proxy
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/blocked.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/departed.list,PROXY
 
 # Final
 FINAL,PROXY
