--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -30,7 +30,7 @@ RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple
 #Sparkmail App
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/sparkmail.list,DIRECT
 #TG WA direct
-#RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/messengers.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/messengers.list,DIRECT
 #Force Blocked 
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/blocked.list,PROXY
 
