--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -25,15 +25,14 @@ DOMAIN-KEYWORD,google,PROXY
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_domains_ext_UA.list,DIRECT
 #Yandex, Mail, Selectel, Tilda and other forced domains
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
-#Apple force
-RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_old.list,DIRECT
 #Sparkmail App
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/sparkmail.list,DIRECT
 #TG WA direct
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/messengers.list,DIRECT
 #Force Blocked 
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/blocked.list,PROXY
-
+#Apple Media Proxy
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_media.list,PROXY
 # Final
 FINAL,PROXY
 
