--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -31,6 +31,8 @@ RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/spark
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/messengers.list,DIRECT
 #Force Blocked 
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/blocked.list,PROXY
+#Apple Force 
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/apple_old.list,PROXY
 # Final
 FINAL,PROXY
 
