--- a/IN_RU/PROXY_ext_local.conf
+++ b/IN_RU/PROXY_ext_local.conf
@@ -26,7 +26,7 @@ RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/CIS_d
 #Yandex, Mail, Selectel, Tilda and other forced domains
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/providers.list,DIRECT
 #TG WA direct
-RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/messengers.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/messengers.list,PROXY
 #Force Blocked 
 RULE-SET,https://raw.githubusercontent.com/SNETLV/SR/refs/heads/main/IN_RU/blocked.list,PROXY
 #Apple Force 
